<resources>
    <string name="app_name">Komunitas Kelas</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Apa itu komunitas kelas?</string>
    <string name="set_welcome_message_1">Komunitas Kelas adalah aplikasi diskusi diluar KBM bagi guru dan siswa</string>
    <string name="welcome_2">Kegunaan utama?</string>
    <string name="set_welcome_message_2">Menghilangkan kesenjangan antara siswa dan guru untuk saling berkomunikasi lebih terbuka</string>
    <string name="welcome_3">Apa kelebihannya?</string>
    <string name="set_welcome_message_3">Setiap pengguna bisa memberikan rating untuk setiap jawaban pada setiap pertanyaan yang diajukan di komunitas</string>
    <string name="done">Selesai</string>
    <string name="menu_pin">Sematkan Topik</string>
    <string name="menu_edit">Edit Topik</string>
    <string name="menu_delete">Hapus Topik</string>
    <string name="home_tittle">Beranda</string>
    <string name="message_tittle">Pesan</string>
    <string name="notification_text">Pemberitahuan</string>
    <string name="app_jargon">Ayo Terhubung</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_setting">Pengaturan</string>
    <string name="menu_logout">Keluar</string>
    <string name="hint_topic">Mata Pelajaran</string>
    <string name="hint_class">Nama Kelas</string>
    <string name="tx_choose_icon">Pilih Icon Kelas</string>
    <string name="err_msg_name">Tidak boleh kosong</string>
    <string name="activity_create_tittle">Buat Kelas</string>
    <string name="menu_finish">Selesai</string>
    <string name="hint_nama_lengkap">Nama Lengkap</string>
    <string name="hint_tipeuser">Daftar Sebagai</string>
    <string name="hint_provinsi">Provinsi</string>
    <string name="hint_kota">Kota</string>
    <string name="hint_sekolah">Sekolah</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="hint_confirm_pass">Konfirmasi Kata Sandi</string>
    <string name="activity_register">Daftar Baru</string>
    <string name="button_login">Masuk</string>
    <string name="link_register">Daftar baru</string>
    <string name="hint_email">Email</string>
    <string name="info_dont_account">Tidak punya akun?</string>
    <string name="hint_username">Surel</string>
    <string name="type_your_message">Enter msg</string>
    <string name="NoRecent">No recent</string>
    <string name="error_empty">Field tidak boleh kosong</string>
    <string name="ok">OK</string>
    <string name="error">Terjadi kesalahan</string>
    <string name="error_email">Email tidak benar</string>
    <string name="button_pinned">Pinned</string>
    <string name="button_voted">Voted</string>
    <string name="activity_detail_qustion">Details Question</string>
    <string name="write_answer">Tulis komentar</string>
</resources>
