<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:title="Search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_transaksi"
        android:orderInCategory="100"
        android:title="@string/menu_pin"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_corfirm"
        android:orderInCategory="100"
        android:title="@string/menu_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scanner"
        android:orderInCategory="100"
        android:title="@string/menu_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
