<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="3dp"
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/background_card">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                card_view:cardBackgroundColor="@android:color/white"
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_email"
                    android:textColorHint="@color/secondary_text" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                card_view:cardBackgroundColor="@android:color/white"
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/secondary_text" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>

    <ImageView
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="245dp"
        android:src="@drawable/logo" />

    <Button
        android:layout_marginTop="255dp"
        android:textColor="@color/icons"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:id="@+id/button_signin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:text="@string/button_login"
        android:layout_gravity="center" />

    <TextView
        android:textSize="12sp"
        android:layout_marginBottom="80dp"
        android:layout_gravity="center|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/info_dont_account"
        android:textColor="@color/cardview_dark_background" />

    <TextView
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="55dp"
        android:layout_gravity="center|bottom"
        android:id="@+id/link_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/link_register"
        android:textColor="@color/cardview_dark_background" />

</android.support.design.widget.CoordinatorLayout>