<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.CreateClassActivity">

    <include layout="@layout/kom_view_toolbar"/>

<LinearLayout
    android:layout_marginTop="50dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/tx_choose_icon"
        android:textColor="@color/secondary_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.inagata.komunitaskelas.ui.view.CenterHorizontalImageView
        android:id="@+id/list_icon_class_group"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="100dp">

        <LinearLayout
            android:id="@+id/list_icon_class"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
        </LinearLayout>

        </com.inagata.komunitaskelas.ui.view.CenterHorizontalImageView>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="5dp"
        android:id="@+id/input_layout_topics_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/input_topics_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_topic" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="5dp"
        android:id="@+id/input_layout_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/input_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_class" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
    </android.support.design.widget.CoordinatorLayout>